--- a/src/assets/style/theme/star/index.scss
+++ b/src/assets/style/theme/star/index.scss
@@ -15,20 +15,26 @@ $theme-menu-item-background-color-hover: #187181;
 
 // 顶栏上的文字颜色
 $theme-header-text-color: #FFF;
-// 顶栏上的项目在 hover 时的背景颜色
+// 顶栏上的项目在 hover 时
+$theme-header-item-color-hover: #FFF;
 $theme-header-item-background-color-hover: rgba(#FFF, .3);
-// 顶栏上的项目在 focus 时的背景颜色
+// 顶栏上的项目在 focus 时
+$theme-header-item-color-focus: #FFF;
 $theme-header-item-background-color-focus: rgba(#FFF, .3);
-// 顶栏上的项目在 active 时的背景颜色
+// 顶栏上的项目在 active 时
+$theme-header-item-color-active: #FFF;
 $theme-header-item-background-color-active: rgba(#000, .3);
 
 // 侧边栏上的文字颜色
 $theme-aside-text-color: #FFF;
-// 侧边栏上的项目在 hover 时的背景颜色
+// 侧边栏上的项目在 hover 时
+$theme-aside-item-color-hover: #FFF;
 $theme-aside-item-background-color-hover: rgba(#FFF, .3);
-// 顶栏上的项目在 focus 时的背景颜色
+// 侧边栏上的项目在 focus 时
+$theme-aside-item-color-focus: #FFF;
 $theme-aside-item-background-color-focus: rgba(#FFF, .3);
-// 侧边栏上的项目在 active 时的背景颜色
+// 侧边栏上的项目在 active 时
+$theme-aside-item-color-active: #FFF;
 $theme-aside-item-background-color-active: rgba(#000, .3);
 
 .theme-#{$theme-name} {
