--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -4,6 +4,8 @@
 .layout-main {
   height: 100vh;
   width: 100vw;
+  background-size: cover;
+  background-position: center;
   // [布局] 顶栏
   .el-header {
     padding: 0px;
