--- a/src/assets/style/theme/star/setting.scss
+++ b/src/assets/style/theme/star/setting.scss
@@ -8,8 +8,8 @@ $theme-bg-image: '/static/image/bg/star.jpg';
 $theme-container-border: 1px solid #d8dfea;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
-$theme-menu-item-color-hover: #FFF;
-$theme-menu-item-background-color-hover: #187181;
+$theme-menu-item-color-hover: #293849;
+$theme-menu-item-background-color-hover: #ecf5ff;
 
 // 顶栏上的文字颜色
 $theme-header-item-color: #FFF;
