--- a/src/assets/style/theme/star/setting.scss
+++ b/src/assets/style/theme/star/setting.scss
@@ -16,10 +16,10 @@ $theme-header-item-color: #FFF;
 $theme-header-item-background-color: transparent;
 // 顶栏上的项目在 hover 时
 $theme-header-item-color-hover: #FFF;
-$theme-header-item-background-color-hover: rgba(#FFF, .3);
+$theme-header-item-background-color-hover: rgba(#000, .2);
 // 顶栏上的项目在 focus 时
 $theme-header-item-color-focus: #FFF;
-$theme-header-item-background-color-focus: rgba(#FFF, .3);
+$theme-header-item-background-color-focus: rgba(#000, .2);
 // 顶栏上的项目在 active 时
 $theme-header-item-color-active: #FFF;
 $theme-header-item-background-color-active: rgba(#000, .3);
@@ -29,10 +29,10 @@ $theme-aside-item-color: #FFF;
 $theme-aside-item-background-color: transparent;
 // 侧边栏上的项目在 hover 时
 $theme-aside-item-color-hover: #FFF;
-$theme-aside-item-background-color-hover: rgba(#FFF, .3);
+$theme-aside-item-background-color-hover: rgba(#000, .2);
 // 侧边栏上的项目在 focus 时
 $theme-aside-item-color-focus: #FFF;
-$theme-aside-item-background-color-focus: rgba(#FFF, .3);
+$theme-aside-item-background-color-focus: rgba(#000, .2);
 // 侧边栏上的项目在 active 时
 $theme-aside-item-color-active: #FFF;
 $theme-aside-item-background-color-active: rgba(#000, .3);
