--- a/src/assets/style/theme/d2/setting.scss
+++ b/src/assets/style/theme/d2/setting.scss
@@ -3,7 +3,7 @@ $theme-name: 'd2';
 // 主题背景颜色
 $theme-bg-color: $color-bg;
 // 主题背景图片
-// $theme-bg-image: '/static/image/bg/star.jpg';
+// $theme-bg-image: '/static/image/bg/xxx.jpg';
 // container组件的边框
 $theme-container-border: 1px solid $color-border-1;
 
