--- a/src/assets/style/theme/d2/setting.scss
+++ b/src/assets/style/theme/d2/setting.scss
@@ -5,7 +5,8 @@ $theme-bg-color: $color-bg;
 // 主题背景图片
 // $theme-bg-image: '/static/image/bg/xxx.jpg';
 // container组件的边框
-$theme-container-border: 1px solid $color-border-1;
+$theme-container-border-inner: 1px solid $color-border-1;
+$theme-container-border-outer: 1px solid $color-border-1;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
