--- a/src/assets/style/theme/star/setting.scss
+++ b/src/assets/style/theme/star/setting.scss
@@ -5,8 +5,8 @@ $theme-bg-color: #EFF4F8;
 // 主题背景图片
 $theme-bg-image: '/static/image/bg/star.jpg';
 // container组件的边框
-$theme-container-border-inner: 1px solid #d8dfea;
-$theme-container-border-outer: 1px solid #d8dfea;
+$theme-container-border-inner: 1px solid $color-border-2;
+$theme-container-border-outer: none;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
