--- a/src/assets/style/theme/star/setting.scss
+++ b/src/assets/style/theme/star/setting.scss
@@ -3,7 +3,7 @@ $theme-name: 'star';
 // 主题背景颜色
 $theme-bg-color: #EFF4F8;
 // 主题背景图片
-$theme-bg-image: '/static/image/bg/star.jpg';
+$theme-bg-image: '/static/image/bg/star-squashed.jpg';
 // container组件的边框
 $theme-container-border-inner: 1px solid $color-border-2;
 $theme-container-border-outer: none;
