--- a/src/assets/style/theme/star/setting.scss
+++ b/src/assets/style/theme/star/setting.scss
@@ -4,8 +4,9 @@ $theme-name: 'star';
 $theme-bg-color: #EFF4F8;
 // 主题背景图片
 $theme-bg-image: '/static/image/bg/star-squashed.jpg';
-// container组件的边框
-$theme-container-border-inner: 1px solid $color-border-2;
+// container组件
+$theme-container-background-color: rgba(#FFF, .9);
+$theme-container-border-inner: 1px solid #8fb0b1;
 $theme-container-border-outer: none;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
