--- a/src/assets/style/theme/line/setting.scss
+++ b/src/assets/style/theme/line/setting.scss
@@ -4,8 +4,10 @@ $theme-name: 'line';
 $theme-bg-color: $color-bg;
 // 主题背景图片
 $theme-bg-image: '/static/image/bg/line-squashed.jpg';
+
 // container组件
 $theme-container-background-color: rgba(#FFF, .8);
+$theme-container-header-footer-background-color: rgba(#FFF, .6);
 $theme-container-border-inner: 1px solid $color-border-2;
 $theme-container-border-outer: 1px solid $color-border-1;
 
