--- a/src/assets/style/theme/star/setting.scss
+++ b/src/assets/style/theme/star/setting.scss
@@ -8,7 +8,7 @@ $theme-bg-image: '/static/image/bg/star-squashed.jpg';
 // container组件
 $theme-container-background-color: rgba(#FFF, .9);
 $theme-container-header-footer-background-color: rgba(#FFF, .6);
-$theme-container-border-inner: 1px solid #8fb0b1;
+$theme-container-border-inner: 1px solid #cecece;
 $theme-container-border-outer: none;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
