--- a/src/assets/style/theme/line/setting.scss
+++ b/src/assets/style/theme/line/setting.scss
@@ -13,7 +13,7 @@ $theme-container-border-outer: 1px solid $color-border-1;
 
 // 顶栏和侧边栏中展开的菜单 hover 状态下
 $theme-menu-item-color-hover: #293849;
-$theme-menu-item-background-color-hover: #ecf5ff;
+$theme-menu-item-background-color-hover: #EFEFEF;
 
 // 顶栏上的文字颜色
 $theme-header-item-color: $color-text-normal;
