--- a/src/assets/style/theme/tomorrow-night-blue/setting.scss
+++ b/src/assets/style/theme/tomorrow-night-blue/setting.scss
@@ -3,7 +3,7 @@ $theme-name: 'tomorrow-night-blue';
 // 主题背景颜色
 $theme-bg-color: #002147;
 // 主题背景图片
-// $theme-bg-image: '/static/image/bg/xxx.jpg';
+$theme-bg-image: none;
 
 // container组件
 $theme-container-background-color: #FFF;
