--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -1,5 +1,3 @@
-@import '~@/assets/style/public.scss';
-
 // 主题公用
 .layout-main {
   height: 100vh;
@@ -93,6 +91,26 @@
           }
         }
       }
+      // 菜单为空的时候显示的信息
+      .menu-empty {
+        height: 160px;
+        margin: 10px;
+        margin-top: 0px;
+        border-radius: 4px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        cursor: pointer;
+        user-select: none;
+        i {
+          font-size: 30px;
+          margin-bottom: 10px;
+        }
+        span {
+          font-size: 14px;
+        }
+      }
       // [菜单] 折叠状态
       .el-menu--collapse {
         background-color: transparent;
@@ -140,6 +158,208 @@
       width: 100%;
       padding: 18px 20px;
       box-sizing: border-box;
+    }
+  }
+}
+
+// 每个主题特有的设置
+
+.theme-#{$theme-name} {
+
+  .layout-main {
+    background-color: $theme-bg-color;
+    background-image: $theme-bg-image;
+  }
+  // 菜单项目
+  @mixin theme-menu-hover-style {
+    color: $theme-menu-item-color-hover;
+    i {
+      color: $theme-menu-item-color-hover;
+    }
+    background-color: $theme-menu-item-background-color-hover;
+  }
+  .el-submenu__title:hover {
+    @include theme-menu-hover-style;
+  }
+  .el-menu-item:hover {
+    @include theme-menu-hover-style;
+  }
+  .el-menu--horizontal .el-menu-item:not(.is-disabled):hover {
+    @include theme-menu-hover-style;
+  }
+  .el-menu--horizontal .el-menu .el-submenu__title:hover {
+    @include theme-menu-hover-style;
+  }
+
+  // [组件] d2-container-full
+  .d2-container-full {
+    border: $theme-container-border-outer;
+    border-bottom: none;
+    background-color: $theme-container-background-color;
+    .d2-container-full__header {
+      border-bottom: $theme-container-border-inner;
+      background-color: $theme-container-header-footer-background-color;
+    }
+    .d2-container-full__footer {
+      border-top: $theme-container-border-inner;
+      background-color: $theme-container-header-footer-background-color;
+    }
+  }
+  // [组件] d2-container-card
+  .d2-container-card {
+    border: $theme-container-border-outer;
+    background-color: $theme-container-background-color;
+    .el-card__header {
+      border-bottom: $theme-container-border-inner;
+      background-color: $theme-container-header-footer-background-color;
+    }
+  }
+  
+  // 顶栏
+  .el-header {
+    // 切换按钮
+    .toggle-aside-btn {
+      i {
+        color: $theme-header-item-color;
+        background-color: $theme-header-item-background-color;
+        &:hover {
+          color: $theme-header-item-color-hover;
+        }
+      }
+    }
+    // 顶栏菜单
+    .el-menu {
+      .el-menu-item {
+        transition: border-top-color 0s;
+        color: $theme-header-item-color;
+        background-color: $theme-header-item-background-color;
+        &:hover {
+          color: $theme-header-item-color-hover;
+          background-color: $theme-header-item-background-color-hover;
+        }
+        &:focus {
+          color: $theme-header-item-color-focus;
+          background-color: $theme-header-item-background-color-focus;
+        }
+        &.is-active {
+          color: $theme-header-item-color-active;
+          background-color: $theme-header-item-background-color-active;
+        }
+      }
+      .el-submenu {
+        .el-submenu__title {
+          transition: border-top-color 0s;
+          color: $theme-header-item-color;
+          background-color: $theme-header-item-background-color;
+          .el-submenu__icon-arrow {
+            color: $theme-header-item-color;
+          }
+          &:hover {
+            color: $theme-header-item-color-hover;
+            background-color: $theme-header-item-background-color-hover;
+            .el-submenu__icon-arrow {
+              color: $theme-header-item-color-hover;
+            }
+          }
+          &:focus {
+            color: $theme-header-item-color-focus;
+            background-color: $theme-header-item-background-color-focus;
+            .el-submenu__icon-arrow {
+              color: $theme-header-item-color-focus;
+            }
+          }
+        }
+      }
+    }
+    // 顶栏右侧
+    .d2-header-right {
+      .btn-text {
+        color: $theme-header-item-color;
+        &.can-hover {
+          &:hover {
+            color: $theme-header-item-color-hover;
+            background-color: $theme-header-item-background-color-hover;
+          }
+        }
+      }
+    }
+  }
+  // [布局] 顶栏下面
+  .el-container {
+    // 侧边栏
+    .el-aside {
+      // 菜单为空的时候显示的信息
+      .menu-empty {
+        background-color: $theme-aside-menu-empty-background-color;
+        i {
+          color: $theme-aside-menu-empty-icon-color;
+        }
+        span {
+          color: $theme-aside-menu-empty-text-color;
+        }
+        &:hover {
+          background-color: $theme-aside-menu-empty-background-color-hover;
+          i {
+            color: $theme-aside-menu-empty-icon-color-hover;
+          }
+          span {
+            color: $theme-aside-menu-empty-text-color-hover;
+          }
+        }
+      }
+      // [菜单] 正常状态
+      .el-menu {
+        .el-menu-item {
+          color: $theme-aside-item-color;
+          background-color: $theme-aside-item-background-color;
+          i {
+            color: $theme-aside-item-color;
+          }
+          &:hover {
+            color: $theme-aside-item-color-hover;
+            background-color: $theme-aside-item-background-color-hover;
+            i {
+              color: $theme-aside-item-color-hover;
+            }
+          }
+          &:focus {
+            color: $theme-aside-item-color-focus;
+            background-color: $theme-aside-item-background-color-focus;
+            i {
+              color: $theme-aside-item-color-focus;
+            }
+          }
+          &.is-active {
+            color: $theme-aside-item-color-active;
+            background-color: $theme-aside-item-background-color-active;
+            i {
+              color: $theme-aside-item-color-active;
+            }
+          }
+        }
+      }
+      .el-submenu {
+        .el-submenu__title {
+          color: $theme-aside-item-color;
+          background-color: $theme-aside-item-background-color;
+          i {
+            color: $theme-aside-item-color;
+          }
+          .el-submenu__icon-arrow {
+            color: $theme-aside-item-color;
+          }
+          &:hover {
+            color: $theme-aside-item-color-hover;
+            background-color: $theme-aside-item-background-color-hover;
+            i {
+              color: $theme-aside-item-color-hover;
+            }
+            .el-submenu__icon-arrow {
+              color: $theme-aside-item-color-hover;
+            }
+          }
+        }
+      }
     }
   }
 }
