--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -5,15 +5,6 @@
   background-size: cover;
   background-position: center;
   position: relative;
-  // &:before {
-  //   content: '';
-  //   position: absolute;
-  //   top: 0px;
-  //   right: 0px;
-  //   bottom: 0px;
-  //   left: 0px;
-  //   background-color: rgba(#000, .5);
-  // }
   // [布局] 顶栏
   .el-header {
     padding: 0px;
@@ -78,7 +69,7 @@
     // 侧边栏
     .el-aside {
       transition: width .3s;
-      overflow: inherit;
+      overflow: auto;
       // [菜单] 正常状态
       .el-menu {
         @extend %unable-select;
