--- a/src/assets/style/theme/d2/setting.scss
+++ b/src/assets/style/theme/d2/setting.scss
@@ -4,6 +4,8 @@ $theme-name: 'd2';
 $theme-bg-color: #f8f8f9;
 // 主题背景图片
 $theme-bg-image: none;
+// 主题背景图片遮罩
+$theme-bg-mask: rgba(#000, 0);
 
 // container组件
 $theme-container-background-color: rgba(#FFF, 1);
