--- a/src/assets/style/theme/tomorrow-night-blue/setting.scss
+++ b/src/assets/style/theme/tomorrow-night-blue/setting.scss
@@ -4,6 +4,8 @@ $theme-name: 'tomorrow-night-blue';
 $theme-bg-color: #002147;
 // 主题背景图片
 $theme-bg-image: none;
+// 主题背景图片遮罩
+$theme-bg-mask: rgba(#000, 0);
 
 // container组件
 $theme-container-background-color: #FFF;
