--- a/src/assets/style/fixed/base.scss
+++ b/src/assets/style/fixed/base.scss
@@ -10,6 +10,7 @@ html, body {
     bottom: 0px;
     left: 0px;
     right: 0px;
+    overflow: hidden;
     a {
       text-decoration: none;
     }
