--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -4,6 +4,7 @@
   width: 100%;
   background-size: cover;
   background-position: center;
+  overflow: hidden;
   position: relative;
   // 背景上面的半透明遮罩
   .layout-main-mask {
