--- a/src/assets/style/theme/register.scss
+++ b/src/assets/style/theme/register.scss
@@ -2,3 +2,4 @@
 @import '~@/assets/style/theme/line/index.scss';
 @import '~@/assets/style/theme/star/index.scss';
 @import '~@/assets/style/theme/tomorrow-night-blue/index.scss';
+@import '~@/assets/style/theme/violet/index.scss';
