--- a/src/assets/style/theme/violet/index.scss
+++ b/src/assets/style/theme/violet/index.scss
@@ -6,8 +6,8 @@
 
   // 背景图片和遮罩
   .layout-main-group {
-    background: #9A00E3;
-    background: linear-gradient(120deg, #9A00E3 0%, #4EFFFB 100%);
+    background: #bc00e3;
+    background: linear-gradient(120deg, #bc00e3 0%, #4EFFFB 100%);
     .layout-main-mask {
       background-color: $theme-bg-mask;
     }
